--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@supabase/supabase-js": "^2.81.1",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.6.1",
-    "express": "^5.1.0",
-    "node-fetch": "^3.3.2"
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
